--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/schedule": "^6.0.0",
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
@@ -35,6 +36,7 @@
     "class-validator": "^0.14.2",
     "get-stream": "^9.0.1",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -56,6 +58,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/moment": "^2.11.29",
     "@types/node": "^22.15.33",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
