--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
+    "bwip-js": "^4.6.0",
     "canvas": "^3.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
