--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "framer-motion": "^12.19.1",
+    "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.518.0",
     "next": "15.3.4",
@@ -36,6 +37,7 @@
     "@tailwindcss/postcss": "^4.1.10",
     "@types/date-fns": "^2.5.3",
     "@types/jest": "^30.0.0",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^20.19.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
