--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,8 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.518.0",
     "next": "^15.3.4",
+    "pdfjs-dist": "^3.4.120",
+    "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "recharts": "^3.0.2",
@@ -39,6 +41,8 @@
     "@types/jest": "^30.0.0",
     "@types/jspdf": "^1.3.3",
     "@types/node": "^20.19.2",
+    "@types/pdfjs-dist": "^2.10.377",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/recharts": "^1.8.29",
