--- a/backend/package.json
+++ b/backend/package.json
@@ -39,10 +39,12 @@
     "get-stream": "^9.0.1",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
+    "multer": "^2.0.1",
     "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pdf-lib": "^1.17.1",
+    "pdf-parse": "^1.1.1",
     "pdfkit": "^0.17.1",
     "pg": "^8.16.1",
     "qrcode": "^1.5.4",
@@ -62,6 +64,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/moment": "^2.11.29",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.16.0",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
