--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "recharts": "^3.0.2",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.5",
     "tailwind-variants": "^1.0.0"
   },
