--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "get-stream": "^9.0.1",
+    "image-to-base64": "^2.2.0",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "multer": "^2.0.1",
@@ -47,12 +48,15 @@
     "passport-jwt": "^4.0.1",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
+    "pdf-poppler": "^0.2.1",
+    "pdf2pic": "^3.2.0",
     "pdfkit": "^0.17.1",
     "pg": "^8.16.1",
     "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
+    "tesseract.js": "^4.1.4",
     "typeorm": "^0.3.24"
   },
   "devDependencies": {
@@ -70,7 +74,9 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^22.16.0",
     "@types/passport-jwt": "^4.0.1",
+    "@types/pdf-parse": "^1.1.5",
     "@types/supertest": "^6.0.2",
+    "@types/tesseract.js": "^0.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
